responsive donate btns

--- a/donate.html
+++ b/donate.html
@@ -1,3 +1,5 @@
+<!-- TODO: add links -->
+
 <div class="donate__container">
   <div class="donate__btn-row">
     <a class="donate__btn e141-22 x-anchor x-anchor-button" href="#">
